--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -86,12 +86,22 @@ ru:
       name: 'Название галереи:'
       description: 'Описание:'
       cencel: 'Назад'
+    index:
+       title: 'Фотогалерея'
+       create: 'Создан:'
+       photo:  'Фотографий в альбоме:'
+  gallery:
+    show:
+       title: 'Фото'
+       name: 'Название'
+       description: 'Описание'
+       cencel: 'Назад'
   letters:
     new:
        title: 'Новое письмо'
     form:
       info: 'Поля с звездочкой обязательны к заполнению!
-      Пожалуйста укажите способ по которому я смогу связаться с вами!'
+      И не забывайте указать способ по которому я смогу связаться с вами!'
       fio: '*ФИО:'
       name: 'Имя:'
       email: '*Ваша електронна почта:'
@@ -129,6 +139,7 @@ ru:
       warning: 'Предупреждение!'
       text_warning: 'Только зарегистрированные пользователи могут задавать мне вопросы.'
       create_profile: 'Создать профиль'
+      counter_questions: 'Вопросов задано:'
     edit:
       responce: 'Ответ'
       info: 'Вопросы.'
